--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 .card-container {
   display: flex;
   width: 100%;
@@ -5,4 +7,21 @@
 .drop-down {
   background-color: white;
   overflow-y: scroll;
+}
+
+.pokecard {
+  font-family: 'Anton', sans-serif;
+  border: 5px solid red;
+  background-color: yellow;
+  color: blue;
+  border-radius: 25px;
+  padding: 30px;
+  text-align: center;
+  margin: 20px;
+}
+
+button {
+  background-color: yellow;
+  color: blue;
+  border: 2px solid red;
 }
