--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   width: 100%;
 }
 .drop-down {
+  display: flex;
+  flex-direction: column;
   background-color: white;
   overflow-y: scroll;
 }
@@ -20,8 +22,21 @@
   margin: 20px;
 }
 
+.searchlistcontainer {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  font-size: 20px;
+  font-family: 'Anton', sans-serif;
+  justify-items: center;
+}
+
 button {
   background-color: yellow;
   color: blue;
   border: 2px solid red;
+  font-size: 20px;
+  font-family: 'Anton', sans-serif;
 }
