--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
+body, html {
+  height: 100%;
+  margin: 0;
+  background-color: #B4CDFF;
+}
+
 .card-container {
   display: flex;
   width: 100%;
@@ -9,6 +15,15 @@
   flex-direction: column;
   background-color: white;
   overflow-y: scroll;
+  font-family: 'Anton', sans-serif;
+  text-align: center;
+  margin-top: 20px;
+  cursor: pointer;
+  background-image: url("https://assets.pokemon.com//assets/cms2/img/misc/virtual-backgrounds/sword-shield/pokemon-in-the-wild.png")
+}
+
+h3:hover {
+  color: blue;
 }
 
 .pokecard {
@@ -25,12 +40,12 @@
 .searchlistcontainer {
   display: flex;
   flex-direction: column;
+  margin: 40px;
 }
 
 input {
   font-size: 20px;
   font-family: 'Anton', sans-serif;
-  justify-items: center;
 }
 
 button {
@@ -39,4 +54,5 @@ button {
   border: 2px solid red;
   font-size: 20px;
   font-family: 'Anton', sans-serif;
+  cursor: pointer;
 }
