--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,17 @@ body, html {
   height: 100%;
   margin: 0;
   background-color: #B4CDFF;
+  width: 100%;
 }
-
 .card-container {
   display: flex;
   width: 100%;
 }
 .drop-down {
+  position: fixed;
+  top: 90px;
+  width: 95%;
+  height: 500px;
   display: flex;
   flex-direction: column;
   background-color: white;
