--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 body, html {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   background-color: #B4CDFF;
 }
 
 .card-container {
   display: flex;
-  width: 100%;
+  width: 100vw;
+  justify-content: center;
 }
 .drop-down {
   display: flex;
@@ -32,20 +33,26 @@ h3:hover {
   background-color: yellow;
   color: blue;
   border-radius: 25px;
-  padding: 30px;
+  padding: 10px;
   text-align: center;
-  margin: 20px;
+  margin: 5px;
 }
 
 .searchlistcontainer {
   display: flex;
   flex-direction: column;
-  margin: 40px;
+  margin: 10px;
+  width: 50vw;
+  align-items: stretch;
+  justify-content: space-evenly;
 }
 
 input {
   font-size: 20px;
   font-family: 'Anton', sans-serif;
+  text-align: center;
+  border-radius: 25px;
+  outline:none
 }
 
 button {
@@ -55,4 +62,16 @@ button {
   font-size: 20px;
   font-family: 'Anton', sans-serif;
   cursor: pointer;
+  border-radius: 25px;
+  outline: none;
+}
+
+.search-wrapper {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
+.divide {
+  height: 5px;
 }
