--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue');
 
 body, html {
   height: 100vh;
@@ -79,5 +80,12 @@ button {
 
 .divide {
   height: 5px;
+}
+.warning {
+  font-family: 'Bebas Neue';
+  text-align: center;
+  font-size: 50px;
+  margin: 5px;
+  color: red;
 }
 
